--- a/frontend/live-stream.html
+++ b/frontend/live-stream.html
@@ -454,6 +454,6 @@
     </script>
     <script src="https://cdn.jsdelivr.net/npm/hls.js@latest"></script>
     <script src="/socket.io/socket.io.js"></script>
-    <script src="../js/stream-viewer.js"></script>
+    <script src="../js/live-stream.js"></script>
 </body>
 </html> 
