--- a/frontend/index.html
+++ b/frontend/index.html
@@ -3,23 +3,24 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Cambodian Theater Live - Experience Traditional Performances</title>
-    <link rel="stylesheet" href="css/style.css">
+    <title>Encore Wat Streams - Experience Traditional Performances</title>
+    <link rel="stylesheet" href="show-css/style.css">
     <link rel="stylesheet" href="css/index.css">
     <link rel="stylesheet" href="css/homepage.css">
     <link href="https://fonts.googleapis.com/css2?family=Playfair+Display:wght@400;700&family=Poppins:wght@300;400;500&display=swap" rel="stylesheet">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/css/all.min.css">
 </head>
 <body>
     <!-- Navigation Bar -->
     <header class="main-header">
         <nav class="navbar">
             <div class="logo">
-                <span>Cambodian Theater Live</span>
+                <span>ENCORE WAT STREAMS</span>
             </div>
             <ul class="nav-links">
-                <li><a href="#home">Home</a></li>
-                <li><a href="#shows">Shows</a></li>
-                <li><a href="login.html">Login</a></li>
+                <li><a href="index.html" class="active">Home</a></li>
+                <li><a href="shows.html">Shows</a></li>
+                <li><a href="profile.html">Profile</a></li>
             </ul>
         </nav>
     </header>
