Change the footer style

--- a/frontend/index.html
+++ b/frontend/index.html
@@ -163,18 +163,10 @@
         <div class="container">
             <div class="footer-content">
                 <div class="footer-links">
-                    <a href="#about">About</a>
-                    <a href="#contact">Contact</a>
-                    <a href="#privacy">Privacy Policy</a>
-                </div>
-                <div class="social-media">
-                    <a href="#" class="social-icon">📘</a>
-                    <a href="#" class="social-icon">📷</a>
-                    <a href="#" class="social-icon">🐦</a>
+                    <a href="https://github.com/NiceKim/Encore-Wat-Streams">Github🔗</a>
                 </div>
             </div>
             <div class="footer-bottom">
-                <p>&copy; 2024 Cambodian Theater Live. Preserving heritage through performance.</p>
             </div>
         </div>
     </footer>
