--- a/frontend/show-details.html
+++ b/frontend/show-details.html
@@ -369,7 +369,7 @@
     </main>
 
     <script>
-        const API_BASE_URL = 'http://localhost:3000/api';
+        const API_BASE_URL = 'https://localhost:3000/api';
         let currentShow = null;
         let currentSchedules = [];
 
