--- a/frontend/shows.html
+++ b/frontend/shows.html
@@ -267,7 +267,7 @@
 
     <script src="js/navigation.js"></script>
     <script>
-        const API_BASE_URL = 'http://localhost:3000/api';
+        const API_BASE_URL = 'https://localhost:3000/api';
         let allShows = [];
 
         async function loadLiveStreams() {
