--- a/frontend/index.html
+++ b/frontend/index.html
@@ -37,24 +37,8 @@
 
         <!-- Now Streaming: Live Performances -->
         <section id="live-streaming" class="live-streaming">
-            <div class="container">
-                <h2>Now Streaming: Live Performances</h2>
-                
-                <!-- Live Performance Card (shown when live) -->
-                <div class="live-performance-card" id="live-card" style="display: none;">
-                    <div class="live-indicator">
-                        <span class="live-badge">LIVE</span>
-                    </div>
-                    <div class="performance-image">
-                        <img src="https://via.placeholder.com/400x300/8B4513/FFD700?text=Lakhon+Khol" alt="Live Performance">
-                    </div>
-                    <div class="performance-info">
-                        <div class="performance-time">8:00 PM</div>
-                        <h3 class="performance-title">Lakhon Khol</h3>
-                        <p class="performance-location">National Theater</p>
-                        <button class="watch-live-btn">Watch Live</button>
-                    </div>
-                </div>
+            <h2>Now Streaming: Live Performances</h2>
+            <div id ="live-streams-container" class="container">
 
                 <!-- No Live Shows Message -->
                 <div class="no-live-message" id="no-live">
