--- a/frontend/show-details.html
+++ b/frontend/show-details.html
@@ -223,7 +223,9 @@
     <header class="main-header">
         <nav class="navbar">
             <div class="logo">
+                <a href="index.html">
                 <span>ENCORE WAT STREAMS</span>
+                </a>
             </div>
             <ul class="nav-links">
                 <li><a href="index.html">Home</a></li>
