updated for presentation

--- a/frontend/live-stream.html
+++ b/frontend/live-stream.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Live Stream - Encore Wat Streams</title>
-    <link rel="stylesheet" href="show-css/style.css">
+    <link rel="stylesheet" href="css/show-style.css">
     <link href="https://fonts.googleapis.com/css2?family=Playfair+Display:wght@400;700&family=Poppins:wght@300;400;500&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/css/all.min.css">
     <style>
@@ -457,6 +457,6 @@
     </script>
     <script src="https://cdn.jsdelivr.net/npm/hls.js@latest"></script>
     <script src="/socket.io/socket.io.js"></script>
-    <script src="../js/live-stream.js"></script>
+    <script src="./js/live-stream.js"></script>
 </body>
 </html> 
