--- a/frontend/theater/index.html
+++ b/frontend/theater/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Stream Manager - Cambodian Theater Live</title>
-    <link rel="stylesheet" href="../show-css/style.css">
+    <link rel="stylesheet" href="../css/show-style.css">
     <link href="https://fonts.googleapis.com/css2?family=Playfair+Display:wght@400;700&family=Poppins:wght@300;400;500&display=swap" rel="stylesheet">
     <style>
         .manager-container {
