--- a/frontend/profile.html
+++ b/frontend/profile.html
@@ -31,6 +31,12 @@
             <div class="profile-info">
                 <h1>Guest User</h1>
                 <p>Member since June 2024</p>
+                <div id="admin-controls" class="admin-controls" style="display: none;">
+                    <a href="theater/index.html" class="primary-button">
+                        <i class="fas fa-theater-masks"></i>
+                        Manage Theater Shows
+                    </a>
+                </div>
             </div>
         </div>
 
