--- a/frontend/booking.html
+++ b/frontend/booking.html
@@ -440,7 +440,7 @@
 
     <script src="js/navigation.js"></script>
     <script>
-        const API_BASE_URL = 'https://localhost:3000/api';
+        const API_BASE_URL = 'http://localhost:3000/api';
         let showData = null;
         let selectedSchedule = null;
         let selectedTicketType = null;
