--- a/frontend/live-stream.html
+++ b/frontend/live-stream.html
@@ -380,18 +380,15 @@
         <div class="stream-content">
             <div class="main-content">
                 <div class="video-container">
-                    <video id="peer-video" class="video-player" autoplay controls>
-                    </video>
-                </div>
-                <div class="reaction-container">
+                    <video id="peer-video" class="video-player" autoplay controls></video>
                     <div class="reaction-box" id="reaction-box"></div>
-                    <div class="reaction-buttons">
-                        <button class="emoji-button" data-emoji="👍">👍</button>
-                        <button class="emoji-button" data-emoji="👏">👏</button>
-                        <button class="emoji-button" data-emoji="❤️">❤️</button>
-                        <button class="emoji-button" data-emoji="🎉">🎉</button>
-                        <button class="emoji-button" data-emoji="😊">😊</button>
-                    </div>
+                </div>
+                <div class="reaction-buttons">
+                    <button class="emoji-button" data-emoji="👍">👍</button>
+                    <button class="emoji-button" data-emoji="👏">👏</button>
+                    <button class="emoji-button" data-emoji="❤️">❤️</button>
+                    <button class="emoji-button" data-emoji="🎉">🎉</button>
+                    <button class="emoji-button" data-emoji="😊">😊</button>
                 </div>
                 <div class="stream-details">
                     <div class="details-section">
